tests/ui/invalid_result_conversion.stderr
error[E0277]: the trait bound `PyErr: From<MyError>` is not satisfied
  --> tests/ui/invalid_result_conversion.rs:22:25
   |
22 | fn should_not_work() -> Result<(), MyError> {
   |                         ^^^^^^ the trait `From<MyError>` is not implemented for `PyErr`
   |
   = help: `PyErr` implements trait `From<T>`:
             From<AddrParseError>
             From<CastError<'_, '_>>
             From<CastIntoError<'_>>
             From<CharTryFromError>
             From<FromUtf8Error>
             From<Infallible>
             From<IntoInnerError<W>>
             From<IntoStringError>
           and $N others
   = note: required for `MyError` to implement `Into<PyErr>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
